fixes a css override issue

--- a/styles/overlay.less
+++ b/styles/overlay.less
@@ -1,6 +1,6 @@
 html > body {
 	
-	>.overlay.spinner {
+	>.overlay.overlay-spinner {
 
 		-webkit-animation-duration: 300ms;
 		-moz-animation-duration: 300ms;
